# agent-timelog

./: .gitattributes  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
adapters/claude-code/: settings-snippet.json
adapters/claude-code/commands/: log.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/scripts/: claude_hook.py  core.py
docs/superpowers/plans/: 2026-06-04-posttooluse-reminder.md
docs/superpowers/specs/: 2026-06-04-posttooluse-reminder-design.md
rules/: time-tracking.md
scripts/: sanitize-check.sh
spec/: format.md
tests/: test_claude_hook.py  test_core.py  test_install.py  test_plugin_sync.py  test_remind_hook.py
tests/fixtures/: valid.jsonl  work.jsonl
timelog/: claude_hook.py  core.py  remind_hook.py
